tests/models/struct/unnamed/f32/pass/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2.0)]
    f32
);
fn main() {}
