tests/models/struct/unnamed/f32/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    f32
);
fn main() {}
